# geometry-processing-curvature

./: CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
build-desktop/: CMakeCache.txt  Makefile  cmake_install.cmake
build-desktop/libigl/: Makefile  cmake_install.cmake
build-desktop/libigl/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-desktop/libigl/glfw/src/: Makefile  cmake_install.cmake
include/: angle_defect.h  internal_angles.h  mean_curvature.h  principal_curvatures.h
src/: angle_defect.cpp  internal_angles.cpp  mean_curvature.cpp  mean_curvature.cpp~RF44cf650.TMP  principal_curvatures.cpp
